working on update user function
